--- a/app/views/all_directors.html.erb
+++ b/app/views/all_directors.html.erb
@@ -1,1 +1,24 @@
-<h1> Hello world</h1> 
+<h1> List of all directors</h1> 
+
+<table border="1">
+
+<tbody>
+<tr>
+  <th>ID</th>
+  <th>Image</th>
+  <th>Name</th>
+  <th>Dob</th>
+  <th></th>
+<%@direc_array.each do |display|%>
+    <tr>
+      <td><%=display.id%></td>
+      <td><img src="<%=display.image%>" style="width:250px"></td>
+      <td><%=display.name%></td>
+      <td><%=display.dob%></td>
+      <td><a href="/:director">Link</a></td>
+    </tr>
+  <%end%>
+
+<%=@direc_array%>
+</tbody>
+</table>
