--- a/app/views/all_directors.html.erb
+++ b/app/views/all_directors.html.erb
@@ -15,11 +15,11 @@
       <td><img src="<%=display.image%>" style="width:250px"></td>
       <td><%=display.name%></td>
       <td><%=display.dob%></td>
-      <td><a href="/directors/<%=display.id%>">Link</a></td>
+      <td><a href="/directors/<%=display.id%>">Show details</a></td>
     </tr>
   <%end%>
 
-<!--<%=@direc_array%>-->
+
 
 </tbody>
 </table>
