--- a/app/views/all_actors.html.erb
+++ b/app/views/all_actors.html.erb
@@ -1,1 +1,25 @@
-<h1> future all actors</h1>
+<h1> List of all actors</h1> 
+
+<table border="1">
+
+<tbody>
+<tr>
+  <th>ID</th>
+  <th>Image</th>
+  <th>Name</th>
+  <th>Dob</th>
+  <th></th>
+<%@actor_array.each do |display|%>
+    <tr>
+      <td><%=display.id%></td>
+      <td><img src="<%=display.image%>" style="width:250px"></td>
+      <td><%=display.name%></td>
+      <td><%=display.dob%></td>
+      <td><a href="/actors/<%=display.id%>">Show details</a></td>
+    </tr>
+  <%end%>
+
+
+
+</tbody>
+</table>
