--- a/app/views/youngest_director.html.erb
+++ b/app/views/youngest_director.html.erb
@@ -1,3 +1,3 @@
 <h1>Youngest director</h1>
 
-<p> The youngest director in our dataset right now is <%=@youngest_director_name%> born on <%=Director.order(:dob).reverse.at(0).dob.strftime('%m%d')%> </p>
+<p> The youngest director in our dataset right now is <a href="/directors/<%=Director.order(:dob).reverse.at(0).id%>"><%=@youngest_director_name%></a>, born on <%=Director.order(:dob).reverse.at(0).dob.strftime('%b %d, %Y')%>. </p>
